--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 readme = "README.md"
 license = {file="LICENSE"}
 requires-python = ">=3.7"
-dependencies = ["requests>=2.20.0"]
+dependencies = ["requests>=2.20.0", "pyyaml"]
 
 [tool.setuptools]
 packages = ["secploy"]
